// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transform record, old + new format, eligible 1`] = `
Object {
  "caseNotes": Object {},
  "clientFirstName": "LINDA",
  "clientLastName": "SMITH",
  "courtCostsPaid": false,
  "currentOffenses": Array [
    "FAILURE TO APPEAR (FELONY)",
  ],
  "dateToday": "2022-03-25",
  "drugScreensPastYear": Array [],
  "eligibilityCategory": "c3",
  "eligibleCriteria": Object {
    "usTnFinesFeesEligible": Object {
      "hasFinesFeesBalanceBelow500": Object {
        "amountOwed": 400,
      },
      "hasPayments3ConsecutiveMonths": Object {
        "amountOwed": 400,
        "consecutiveMonthlyPayments": null,
      },
    },
    "usTnNoArrestsInPastYear": Object {},
    "usTnNoHighSanctionsInPastYear": Object {},
    "usTnNoRecentCompliantReportingRejections": Object {},
    "usTnNotServingIneligibleCrOffense": Object {},
  },
  "eligibleLevelStart": undefined,
  "externalId": "202",
  "formInformation": Object {
    "currentOffenses": Array [
      "STOLEN PROPERTY",
    ],
    "sentenceStartDate": 2020-03-07T00:00:00.000Z,
  },
  "ineligibleCriteria": Object {},
  "judicialDistrict": "Unknown",
  "lastSpecialConditionsNote": undefined,
  "lifetimeOffensesExpired": Array [],
  "metadata": Object {
    "mostRecentArrestCheck": Object {
      "contactDate": 2023-04-01T00:00:00.000Z,
      "contactType": "ARRN",
    },
  },
  "nextSpecialConditionsCheck": undefined,
  "offenseTypeEligibility": undefined,
  "pastOffenses": undefined,
  "poFirstName": "TEST",
  "poLastName": "OFFICER1",
  "remainingCriteriaNeeded": 0,
  "specialConditionsAlcDrugAssessmentComplete": false,
  "specialConditionsAlcDrugScreen": false,
  "specialConditionsAlcDrugTreatment": false,
  "specialConditionsAlcDrugTreatmentCurrent": false,
  "specialConditionsCommunityService": false,
  "specialConditionsCommunityServiceCurrent": false,
  "specialConditionsCounseling": false,
  "specialConditionsCounselingAngerManagementCurrent": false,
  "specialConditionsFlag": undefined,
  "specialConditionsProgramming": false,
  "specialConditionsProgrammingCognitiveBehavior": false,
  "specialConditionsProgrammingCognitiveBehaviorCurrent": false,
  "specialConditionsProgrammingFsw": false,
  "specialConditionsProgrammingFswCurrent": false,
  "specialConditionsProgrammingSafe": false,
  "specialConditionsProgrammingSafeCurrent": false,
  "specialConditionsProgrammingVictimImpact": false,
  "specialConditionsProgrammingVictimImpactCurrent": false,
  "specialConditionsTerminatedDate": undefined,
  "stateCode": "US_TN",
  "supervisionFeeArrearaged": false,
  "supervisionType": "TN PROBATIONER",
  "tdocId": "202",
  "zeroToleranceCodes": Array [],
}
`;

exports[`transform record, old format 1`] = `
Object {
  "caseNotes": Object {},
  "clientFirstName": "LINDA",
  "clientLastName": "SMITH",
  "courtCostsPaid": false,
  "currentOffenses": Array [
    "FAILURE TO APPEAR (FELONY)",
  ],
  "dateToday": "2022-03-25",
  "drugScreensPastYear": Array [],
  "eligibilityCategory": "c3",
  "eligibleCriteria": Object {
    "usTnFinesFeesEligible": Object {
      "hasFinesFeesBalanceBelow500": Object {
        "amountOwed": 600,
      },
      "hasPayments3ConsecutiveMonths": Object {
        "amountOwed": 0,
        "consecutiveMonthlyPayments": 0,
      },
      "hasPermanentFinesFeesExemption": Object {
        "currentExemptions": Array [
          "SSDB",
          "SSDB",
        ],
      },
    },
    "usTnNoArrestsInPastYear": Object {},
    "usTnNoHighSanctionsInPastYear": Object {},
    "usTnNoRecentCompliantReportingRejections": Object {},
    "usTnNotServingIneligibleCrOffense": Object {},
  },
  "eligibleLevelStart": undefined,
  "externalId": "202",
  "formInformation": Object {
    "currentOffenses": Array [
      "FAILURE TO APPEAR (FELONY)",
    ],
    "sentenceStartDate": 2020-03-07T00:00:00.000Z,
  },
  "ineligibleCriteria": Object {},
  "judicialDistrict": "Unknown",
  "lastSpecialConditionsNote": undefined,
  "lifetimeOffensesExpired": Array [],
  "metadata": Object {
    "mostRecentArrestCheck": Object {
      "contactDate": 2023-04-01T00:00:00.000Z,
      "contactType": "ARRN",
    },
  },
  "nextSpecialConditionsCheck": undefined,
  "offenseTypeEligibility": undefined,
  "pastOffenses": undefined,
  "poFirstName": "TEST",
  "poLastName": "OFFICER1",
  "remainingCriteriaNeeded": 0,
  "specialConditionsAlcDrugAssessmentComplete": false,
  "specialConditionsAlcDrugScreen": false,
  "specialConditionsAlcDrugTreatment": false,
  "specialConditionsAlcDrugTreatmentCurrent": false,
  "specialConditionsCommunityService": false,
  "specialConditionsCommunityServiceCurrent": false,
  "specialConditionsCounseling": false,
  "specialConditionsCounselingAngerManagementCurrent": false,
  "specialConditionsFlag": undefined,
  "specialConditionsProgramming": false,
  "specialConditionsProgrammingCognitiveBehavior": false,
  "specialConditionsProgrammingCognitiveBehaviorCurrent": false,
  "specialConditionsProgrammingFsw": false,
  "specialConditionsProgrammingFswCurrent": false,
  "specialConditionsProgrammingSafe": false,
  "specialConditionsProgrammingSafeCurrent": false,
  "specialConditionsProgrammingVictimImpact": false,
  "specialConditionsProgrammingVictimImpactCurrent": false,
  "specialConditionsTerminatedDate": undefined,
  "stateCode": "US_TN",
  "supervisionFeeArrearaged": false,
  "supervisionType": "TN PROBATIONER",
  "tdocId": "202",
  "zeroToleranceCodes": Array [],
}
`;
